Ported newer Master and Slave scripts

--- a/Firmware/Buoys-ping/platformio.ini
+++ b/Firmware/Buoys-ping/platformio.ini
@@ -17,10 +17,13 @@ lib_deps =
 	powerbroker2/SafeString@^4.1.27
 	knolleary/PubSubClient@^2.8
 	terrorsl/sMQTTBroker@^0.1.6
+	mikalhart/TinyGPS@0.0.0-alpha+sha.db4ef9c97a
+	plerup/EspSoftwareSerial@^8.1.0
 
 [env:Master_buoy]
 build_flags = 
 	-D MASTER_BUOY
+
 
 [env:Slave_buoy_1]
 build_flags = 
